# streamtest

./: cabal.project
streamtest/: StreamTest.hs  streamtest.cabal
